# AndroidExample

./: .gitignore  README.md  cyrus.jks  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/cyrus/example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bridge.js  classes3.dex  classes3_extracted.dex  sign.key  sign.vmp  webshell_demo.html
app/src/main/cpp/: CMakeLists.txt  aes_jni.cpp  anti_debug.c  assembly-lib.cpp  base64.cpp  base64.h  changeMD5Constant.cpp  crc32.cpp  custom_base64_alphabet.cpp  custom_crc32_table.cpp  cyrus_studio_hook.cpp  dynamic_base64_alphabet.cpp  fart.cpp  frida_disassemble.cpp  hide.map  hmac_md5.cpp  hmac_sha256.cpp  md5.cpp  md5.h  md5_change_constant.cpp  modified_crc32.cpp  native-lib.cpp  ollvm-lib.cpp  openssl_jni.cpp  sha1.cpp  sha1.h  sha1_change_constant.cpp  sha1_jni.cpp  sha256.cpp  sha256.h  sohooker.cpp  syscall-lib.cpp  syscall64.s  unicorn.cpp  unidbg.cpp  vmp-lib.cpp  webshell_bridge.cpp
app/src/main/cpp/dex/: art_method.h  class_accessor.h  dex_file.h
app/src/main/cpp/jnibridge/: jni_bridge.cpp  jni_bridge.h  jnibridge_example.cpp
app/src/main/cpp/so_unpack/: so_unpack.cpp  soinfo.h
app/src/main/cpp/tiny-aes-c/: aes.cpp  aes_jni.cpp
app/src/main/java/com/cyrus/example/: CyrusStudioApplication.kt  MainActivity.kt
app/src/main/java/com/cyrus/example/aes/: AESActivity.kt  AESUtils.kt  NativeAESUtils.kt
app/src/main/java/com/cyrus/example/antidebug/: AntiDebug.kt  AntiDebugActivity.kt
app/src/main/java/com/cyrus/example/antisniff/: AntiSniffActivity.kt  SniffDetector.kt
app/src/main/java/com/cyrus/example/assembly/: AssemblyActivity.kt
app/src/main/java/com/cyrus/example/base64/: Base64Activity.kt
app/src/main/java/com/cyrus/example/classloader/: ClassLoaderActivity.kt  MyClass.java
app/src/main/java/com/cyrus/example/crc32/: CRC32Activity.kt  CRC32Utils.kt
app/src/main/java/com/cyrus/example/device_fingerprint/: DeviceFingerprintActivity.kt
app/src/main/java/com/cyrus/example/dex2c/: Dex2C.kt
app/src/main/java/com/cyrus/example/fart/: AntiFART.kt  FartActivity.kt
app/src/main/java/com/cyrus/example/frida/disassemble/: FridaDisassembleActivity.kt
app/src/main/java/com/cyrus/example/frida_disassemble/: FridaDisassembleActivity.kt
app/src/main/java/com/cyrus/example/hmac/: HMACActivity.kt  HMACUtils.kt
app/src/main/java/com/cyrus/example/hook/: CyrusStudioHook.kt  HookActivity.kt
app/src/main/java/com/cyrus/example/hotfix/: HotFixActivity.kt  Hotfix.kt
app/src/main/java/com/cyrus/example/jnibridge/: JNIBridge.java  JNIBridgeActivity.kt
app/src/main/java/com/cyrus/example/jniexample/: JNIExample.kt  JNIExampleActivity.kt
app/src/main/java/com/cyrus/example/md5/: MD5Activity.kt  MD5Tools.kt  MD5Utils.kt
app/src/main/java/com/cyrus/example/okhttp/: NetworkClient.kt  OkHttpActivity.kt  OkHttpScreen.kt
app/src/main/java/com/cyrus/example/ollvm/: OLLVMActivity.kt
app/src/main/java/com/cyrus/example/openssl/: OpenSSLActivity.kt
app/src/main/java/com/cyrus/example/plugin/: PluginClass.kt
app/src/main/java/com/cyrus/example/retrofit/: RetrofitActivity.kt
app/src/main/java/com/cyrus/example/retrofit/converter/: StringResponseConverterFactory.kt
app/src/main/java/com/cyrus/example/retrofit/model/: User.kt
app/src/main/java/com/cyrus/example/retrofit/network/: ApiService.kt  RequestResult.kt  RetrofitClient.kt  Tls12SocketFactory.kt  systemDefaultTrustManager.kt
app/src/main/java/com/cyrus/example/root/: RootActivity.kt  RootManager.kt
app/src/main/java/com/cyrus/example/sha1/: SHA1Activity.kt  SHA1Utils.kt
app/src/main/java/com/cyrus/example/shell/: DexExtract.kt  DexExtractActivity.kt  TryItemExample.kt
app/src/main/java/com/cyrus/example/so_unpack/: MapsReader.kt  MemoryMapEntry.kt  MemoryProtector.kt  SoInfoUtils.kt  SoUnpackActivity.kt
app/src/main/java/com/cyrus/example/sohooker/: SoHookerActivity.kt
app/src/main/java/com/cyrus/example/syscall/: SyscallActivity.kt
app/src/main/java/com/cyrus/example/unicorn/: UnicornActivity.kt
app/src/main/java/com/cyrus/example/unidbg/: UnidbgActivity.kt
app/src/main/java/com/cyrus/example/vmp/: AESUtils.kt  SimpleVMP.kt  VMPActivity.kt
app/src/main/java/com/cyrus/example/webview/: WebShellActivity.java  WebShellBridge.java
app/src/main/java/marmojkfnf/mnhosc/cswoel/wvfxxn/: Bhubscfh.java
app/src/main/res/layout/: activity_anti_debug.xml  activity_assembly.xml  activity_base64.xml  activity_frida_disassemble.xml  activity_jni_example.xml  activity_jnibridge.xml  activity_main.xml  activity_ollvmactivity.xml  activity_openssl.xml  activity_syscall.xml  activity_unicorn.xml  activity_unidbg.xml  activity_vmp.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/cyrus/example/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openssl/: CMakeLists.txt  README.md  build.gradle  ossl_http_client.cpp
openssl/arm64-v8a/include/openssl/: configuration.h
openssl/armeabi-v7a/include/openssl/: configuration.h
openssl/include/openssl_utils/: ossl_http_client.h
openssl/x86_64/include/openssl/: configuration.h
plugin/: build.gradle.kts
plugin/src/androidTest/java/com/cyrus/example/plugin/: ExampleInstrumentedTest.kt
plugin/src/main/: AndroidManifest.xml
plugin/src/main/java/com/cyrus/example/plugin/: FartTest.kt  PluginActivity.kt  PluginClass.kt
plugin/src/test/java/com/cyrus/example/plugin/: ExampleUnitTest.kt
vmp/: build.gradle.kts
vmp/sign/: sign
vmp/src/androidTest/java/com/cyrus/vmp/: ExampleInstrumentedTest.kt
vmp/src/main/java/com/cyrus/vmp/: AESUtils.kt  SignDecrypt.kt  SignEncrypt.kt  SignUtil.kt
vmp/src/test/java/com/cyrus/vmp/: ExampleUnitTest.kt  SignUtilTest.kt
